--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,8 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chai-aur-backend
 REFRESH_TOKEN_EXPIRY=10d
 
+CLOUDINARY_CLOUD_NAME=dvdz6becs
+CLOUDINARY_API_KEY=466279499854256
+CLOUDINARY_API_SECRET=cjHReq8soZr62sfbCVQ7mlIVIuQ
+
 CORS_ORIGIN=*
